# python-karooconnect

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
karoo/: __init__.py  auth.py  client.py  exceptions.py  types.py
scripts/: __init__.py  smoke_activities.py
tests/: __init__.py  conftest.py  live_helpers.py  test_activities_unit.py  test_auth_unit.py  test_client_unit.py  test_live_activities.py  test_smoke_unit.py
